Fixing navigation styling on mobile

--- a/app/components/header/burger/style.module.scss
+++ b/app/components/header/burger/style.module.scss
@@ -1,5 +1,5 @@
 .button {
-	width: 150px;
+	width: 120px;
 	height: 30px;
 	background-color: black;
 	display: flex;
@@ -10,6 +10,7 @@
 	top: 0;
 	padding: 10px;
 	cursor: pointer;
+	z-index: 10;
 
 	p {
 		display: none;
@@ -55,7 +56,32 @@
 	}
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (max-width: 768px) {
+	.button {
+		width: 100px;
+		height: 100px;
+		padding: 8px;
+
+		svg {
+			transform: scale(0.9);
+			right: 15px;
+			top: 20px;
+			width: 50px;
+			height: 50px;
+		}
+
+		&::after {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+		}
+	}
+}
+
+@media only screen and (min-width: 769px) {
 	.button {
 		height: 120px;
 		p {
