--- a/app/components/header/style.module.scss
+++ b/app/components/header/style.module.scss
@@ -5,3 +5,21 @@
 	width: 100%;
 	z-index: 1;
 }
+
+.mobile {
+	z-index: 100;
+
+	&::before {
+		content: '';
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0, 0, 0, 0.5);
+		z-index: -1;
+		opacity: 0;
+		pointer-events: none;
+		transition: opacity 0.3s ease;
+	}
+}
